# pixiv-downloader

./: .gitignore  LICENSE  PixivDBManager.py  PixivMultiRunner.py  PixivMultiWorker.py  README.md  multi_config.example.json  pyproject.toml  requirements.txt  web_ui.py
common/: EasyProxiesClient.py  PixivAppApi.py  ProxyTester.py  ProxyUtils.py  RequestsProxyAdapter.py
webui/static/: app.css  app.js
webui/templates/: base.html  multi.html
